fixed image & sizing overflow issues

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -160,6 +160,8 @@ h5 {
 main {
 	width: 80%;
 	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
 }
 
 p {
@@ -211,6 +213,7 @@ nav a {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
+	/* overflow: hidden; */
 
 }
 
@@ -226,13 +229,15 @@ section {
 	border: 1px solid black;
 	background-color: #f2f4f7;
 	margin: 20px 0;
-	height: 275px;
+	/* height: 275px; */
+	height: auto;
 	padding: 20px;
 }
 
 button {
 	font-size: .7em;
 	padding: 10px 35px;
+	margin-top: 20px;
 	border-radius: 5px;
 	border: 1px solid black;
 
@@ -269,8 +274,9 @@ button {
 }
 
 .services-info-img {
-	width: 100%;
-	height: 275px;
+	max-width: 100%;
+	/* height: 275px; */
+	height: auto;
 }
 
 #copywright {
